Style scrollbar y fix search

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,10 @@ body {
     font-size: 16px;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     color: #fffae3;
     background-color: #141827;
@@ -33,3 +37,4 @@ a {
 a:hover {
     color: #c1d9d0
 }
+
